# msar

./: .gitignore  LICENSE  README.md  pyproject.toml
src/msar/: __init__.py  auth_manager.py  cookies.py  inspecting_utils.py  main_factory.py  policies.py  scopes.py  token_manager.py  token_rotator.py  tokens.py
src/msar/managers/: login_manager.py  manager.py  rotation_manager.py  route_manager.py
src/msar/plugins/: plugin_manager.py
src/msar/plugins/plugins/: plugin.py
src/msar/plugins/storages/: storage.py
src/msar/plugins/storages/local/: local_s.py
src/msar/plugins/storages/redis/: redis_s.py
src/msar/scopes/: __init__.py  scopes.py  use.py
src/msar/tokens/: __init__.py  token_manager.py  tokens.py
tests/: __init__.py  setup.py  test.py
tests/setup/: routes.py  setup.py
tests/setups/full/: routes.py  setup.py  test_full.py
tests/setups/quick_start/: routes.py  setup.py  test_quick.py
