[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msar"
version = "0.2.2"
description = "MSAR is a security framework for FastAPI that provides JWT authentication, multi-session token management, adaptive rate limiting, IP intelligence, request observation, and other production-ready security features"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Overwhelmed44", email = "grg0410@mail.ru" }
]
dependencies = [
    "fastapi >=0.116.1",
    "makefun >=1.16.0",
    "PyJWT >=2.10.1"
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
